Правка пути к лого

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header__wrap">
             <a href="#" class="header__logo">
-                <img src="/img/logo.svg" alt="">
+                <img src="img/logo.svg" alt="">
             </a>
             <div class="header__menu">
                 <nav class="header__nav">
