--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <button class="button main__display-button">Оставить заявку</button>
             </div>
             <div class="main__display-background">
-                <img src="/img/bg.jpg" alt="">
+                <img src="img/bg.jpg" alt="">
             </div>
         </section>
     </main>
