--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           </div>
         </nav>
 
+         <div class="bg__element"></div>
+
+
         <main class="main">
           <section class="hero">
             <div class="container">
@@ -195,10 +198,9 @@
               </picture>
               <div class="reg__name">Onlooker R5 Combo</div>
             </div>
-            <!-- <div class="hero__bg">
-          <img src="./img/hero/ellipse-bg1.png" alt="" />
-        </div> -->
+        
           </section>
+          <div class="bg__element"></div>
           <!-- ----------------------- ABOUT----------------------------------- -->
           <section class="about container" data-aos="fade-in">
             <div class="about__item">
@@ -220,6 +222,7 @@
               <div class="about__text">2022 года</div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- -------------------device------------------------------------------------ -->
 
@@ -347,11 +350,7 @@
           <div class="bg__element"></div>
           <!-- ----------------  first video -------------------------------------- -->
 
-          <section
-            class="video container"
-            data-aos="fade-in"
-            data-aos-delay="100"
-          >
+          <section class="video container" data-aos="fade-in" data-aos-delay="100">
             <div class="video__content">
               <div class="video__subtitle">
                 Смотрите полный видео-обзор устройства
@@ -406,6 +405,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ------------------------------tech------------------------------------------- -->
           <section class="tech container" data-aos="fade-in">
@@ -583,6 +583,7 @@
               </picture>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- -------------------------camers ----------------------- -->
           <section class="camers container" data-aos="fade-in">
@@ -861,6 +862,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ------------------- mode-------------------------- -->
 
@@ -2781,6 +2783,7 @@
               </picture>
             </div>
           </section>
+           <div class="bg__element"></div>
           <!-- ------------------ fines  -------------------------- -->
           <section class="fines" data-aos="fade-in">
             <div class="container">
@@ -2925,6 +2928,7 @@
               </picture>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- -------------------------- alert------------------------------- -->
           <section class="alert container" data-aos="fade-in">
@@ -3618,6 +3622,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ----------------------- cold start ---------------------- -->
           <section class="coldstart container" data-aos="fade-in">
@@ -3856,6 +3861,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ---------------  interface -------------------------- -->
           <section class="interface container" data-aos="fade-in">
@@ -4116,6 +4122,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ------------------- form----------------------------------- -->
           <section class="form" data-aos="fade-in">
@@ -4210,6 +4217,7 @@
             />
           </picture> -->
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------- quality -------------------------- -->
           <section class="quality container">
@@ -4382,6 +4390,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ----------------------- filter--------------------------- -->
           <section class="filter">
@@ -4453,7 +4462,8 @@
               </picture>
             </div>
           </section>
-          <div class="bg__element"></div>
+
+           <div class="bg__element"></div>
 
           <!-- -------------------shooting-------------------------------- -->
 
@@ -4747,6 +4757,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------170deg------------------------------- -->
 
@@ -4901,6 +4912,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------- insurance------------------------------ -->
           <section class="insurance container">
@@ -5076,6 +5088,7 @@
               />
             </picture>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------- cartreader------------------------------------- -->
           <section class="cartreader container">
@@ -5318,6 +5331,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
           <!-- ------------------adapter-------------------------- -->
 
           <section class="adapter container">
@@ -5597,6 +5611,7 @@
               </div>
             </div>
           </section>
+           
 
           <!-- ------------------ function--------------------------------- -->
 
@@ -5629,6 +5644,7 @@
             </picture>
           </section>
           <div class="bg__element"></div>
+ 
 
           <!-- ---------------------design----------------------- -->
 
@@ -5721,6 +5737,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ----------------- fastening ------------------------- -->
           <section class="fastening container">
@@ -5847,6 +5864,7 @@
             </div>
             <div class="fastening__360">360&deg;</div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------- installation ----------------------- -->
           <section class="installation container">
@@ -6081,6 +6099,7 @@
               <a href="#" class="promotion__button button">Купить со скидкой</a>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <section class="additional container">
             <div class="additional__title">Дополнительные аксессуары</div>
@@ -6275,6 +6294,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------------------question---------------------------- -->
 
@@ -6759,6 +6779,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- ----------------------examination ---------------------------- -->
           <section class="examination container">
@@ -7163,6 +7184,7 @@
               <a href="#" class="examination__button button">Оставить отзыв</a>
             </div>
           </section>
+           <div class="bg__element"></div>
           <!-- -------------------------- payment------------------------------------- -->
           <div class="payment__top" data-aos="fade-in">
             <div class="pay answer__pay">
@@ -7371,6 +7393,7 @@
               </picture>
             </div>
           </section>
+           <div class="bg__element"></div>
 
           <!-- --------------------------------- answerblock -------------------------------------------- -->
 
@@ -7746,6 +7769,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
           <!-- -------------------------  guarantee  ------------------------------------------ -->
           <section class="guarantee container" data-aos="fade-in">
             <div class="guarantee__one">
@@ -8015,6 +8039,7 @@
               />
             </picture>
           </section>
+           <div class="bg__element"></div>
 
           <!-- -------------------------form 2------------------------------ -->
 
@@ -8272,6 +8297,7 @@
               </div>
             </div>
           </section>
+           <div class="bg__element"></div>
           <!------------------------------- purchase -----------------------------------  -->
           <section class="purchase container">
             <div class="purchase__title" data-aos="fade-in">
